import grpc
from concurrent import futures
import kmeans_pb2
import kmeans_pb2_grpc
import json

class Reducer(kmeans_pb2_grpc.KMeansServiceServicer):
    def __init__(self):
        # Initialize any necessary variables here
        pass

    def ReduceTask(self, request, context):
        # Parse the request
        reducer_id = request.reducer_id
        keys = request.keys
        
        # Collect data from mappers
        data = self._collect_data_from_mappers(keys)
        
        # Perform shuffle and sort
        sorted_data = self._shuffle_sort(data)
        
        # Reduce the data to update centroids
        new_centroids = self._reduce_data(sorted_data)
        
        # Write the new centroids to a file on the local filesystem
        self._write_to_file(new_centroids, reducer_id)
        
        # Return a successful response
        return kmeans_pb2.ReducerResponse(
            reducer_id=reducer_id,
            success=True,
            message="Reduce operation completed successfully."
        )

    def _collect_data_from_mappers(self, keys):
        # Here you would make gRPC calls to the mapper servers to retrieve
        # the intermediate key-value pairs.
        # This is where the actual communication with mappers would occur.
        collected_data = {}
        # Pseudocode for collecting data from mappers:
        for key in keys:
            # Perform gRPC call to mapper
            # Collect data for this key
            pass
        return collected_data

    def _shuffle_sort(self, data):
        # Sort the data by key and shuffle it to ensure that all values for
        # a given key are grouped together.
        sorted_data = {}
        # Pseudocode for shuffling and sorting:
        # You could use a simple sort or a more complex multi-stage shuffle-sort
        # depending on the size of your data and system constraints.
        pass
        return sorted_data

    def _reduce_data(self, sorted_data):
        # This method will process each group of values associated with the
        # same key to compute the new centroids.
        new_centroids = {}
        # Pseudocode for reducing data:
        for key, points in sorted_data.items():
            # Compute the new centroid for this key
            pass
        return new_centroids

    def _write_to_file(self, new_centroids, reducer_id):
        # Persist the newly computed centroids to the filesystem.
        pass

# Function to serve the Reducer server using gRPC
def serve_reducer():
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    kmeans_pb2_grpc.add_KMeansServiceServicer_to_server(Reducer(), server)
    
    # You will need to assign a unique port for each reducer server
    server.add_insecure_port('[::]:50053')
    server.start()
    server.wait_for_termination()

if __name__ == '__main__':
    serve_reducer()
